--- a/LatihanCSS/index.css
+++ b/LatihanCSS/index.css
@@ -2,7 +2,7 @@
 .logo{
 	background-color:  #FAEBD7 ;
 	height: 60px ;
-	width: 2000px ;
+	width: 100% ;
 	margin-top: -18px ;
 	margin-left: -5px ;
 
